// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`policies create 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "165",
    "content-type": "application/json",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "policy": {
      "authentication_assurance_timeout": 3600,
      "description": "testing",
      "display_name": "My New Policy",
      "high_assurance": true,
      "project_id": "my-fake-project-uuid",
    },
  },
  "method": "POST",
  "url": "https://auth.globus.org/v2/api/policies",
}
`;

exports[`policies get 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://auth.globus.org/v2/api/policies/6521a0c3-ffc9-4432-9cb6-41fa8fe2e4e9",
}
`;

exports[`policies getAll 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://auth.globus.org/v2/api/policies",
}
`;

exports[`policies remove 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": undefined,
  "method": "DELETE",
  "url": "https://auth.globus.org/v2/api/policies/6521a0c3-ffc9-4432-9cb6-41fa8fe2e4e9",
}
`;

exports[`policies update 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "content-length": "81",
    "content-type": "application/json",
    "host": "auth.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "json": {
    "policy": {
      "description": "new description",
      "display_name": "Updated Policy Name",
    },
  },
  "method": "PUT",
  "url": "https://auth.globus.org/v2/api/policies/6521a0c3-ffc9-4432-9cb6-41fa8fe2e4e9",
}
`;
